--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1375,3 +1375,36 @@ body {
 .cid-rNBmH8mhhg {
   background-image: url("../../../assets/images/jumbotron.jpg");
 }
+.cid-rNBArKdCI9 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rNBArKdCI9 .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rNBArKdCI9 .section-text {
+  padding: 2rem 0;
+}
+.cid-rNBArKdCI9 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rNBArKdCI9 .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rNBVoQqIcp {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rNBVoQqIcp {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
