--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3382,7 +3382,41 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-rOf4xTekS9 {
-  background-image: url("../../../assets/images/jumbotron5.jpg");
+  background-image: url("../../../assets/images/mbr-2-1920x1280.jpg");
+}
+.cid-rOf8ghgt5J {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #2e2e2e;
+}
+.cid-rOf8ghgt5J .title {
+  margin-bottom: 2rem;
+}
+.cid-rOf8ghgt5J .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-rOf8ghgt5J a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-rOf8ghgt5J a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-rOf8ghgt5J .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-rOf8ghgt5J .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-rOf8ghgt5J H2 {
+  color: #ffffff;
+}
+.cid-rOf8ghgt5J LABEL {
+  text-align: left;
+  color: #ffffff;
 }
 .cid-rNBVoQqIcp {
   padding-top: 30px;
