--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1057,3 +1057,11 @@ body {
   display: none; }
 
 /*# sourceMappingURL=style.css.map */
+.engine {
+	position: absolute;
+	text-indent: -2400px;
+	text-align: center;
+	padding: 0;
+	top: 0;
+	left: -2400px;
+}
